// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown renders a dropdown 1`] = `
<DocumentFragment>
  <ds-dropdown
    label="Dropdown label"
    options="[{\\"label\\":\\"Option 1\\",\\"value\\":\\"1\\"},{\\"label\\":\\"Option 2\\",\\"value\\":\\"2\\"},{\\"label\\":\\"Option 3\\",\\"value\\":\\"3\\"}]"
  >
    <div
      class="ds-c-dropdown"
    >
      <div
        class="ds-c-label ds-c-dropdown__label"
        id="dropdown--1__label"
      >
        Dropdown label
      </div>
      <p
        aria-atomic="true"
        aria-live="assertive"
        class="ds-c-inline-error"
        id="dropdown--1__error"
      />
      <div
        aria-hidden="true"
        data-a11y-ignore="aria-hidden-focus"
        data-testid="hidden-select-container"
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          style="font-size: 16px;"
          tabindex="-1"
          type="text"
        />
        <label>
          Dropdown label
          <select
            size="3"
            tabindex="-1"
          >
            <option />
            <option
              value="1"
            >
              Option 1
            </option>
            <option
              value="2"
            >
              Option 2
            </option>
            <option
              value="3"
            >
              Option 3
            </option>
          </select>
        </label>
      </div>
      <button
        aria-controls="dropdown--1__menu"
        aria-disabled="false"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-invalid="false"
        aria-labelledby="dropdown--1__button-content dropdown--1__label"
        class="ds-c-dropdown__button ds-c-field"
        id="dropdown--1"
        type="button"
      >
        <span
          class="ds-c-dropdown__label-text"
          id="dropdown--1__button-content"
        >
          Option 1
        </span>
        <span
          class="ds-c-dropdown__caret"
        >
          <svg
            aria-hidden="true"
            class="ds-c-icon ds-u-font-size--sm"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M212.7 148.7c6.2-6.2 16.4-6.2 22.6 0l160 160c6.2 6.2 6.2 16.4 0 22.6s-16.4 6.2-22.6 0L224 182.6 75.3 331.3c-6.2 6.2-16.4 6.2-22.6 0s-6.2-16.4 0-22.6l160-160z"
            />
          </svg>
        </span>
      </button>
    </div>
    <template />
  </ds-dropdown>
</DocumentFragment>
`;

exports[`Dropdown renders a dropdown using html options 1`] = `
<DocumentFragment>
  <ds-dropdown
    label="Dropdown label"
  >
    <div
      class="ds-c-dropdown"
    >
      <div
        class="ds-c-label ds-c-dropdown__label"
        id="dropdown--5__label"
      >
        Dropdown label
      </div>
      <p
        aria-atomic="true"
        aria-live="assertive"
        class="ds-c-inline-error"
        id="dropdown--5__error"
      />
      <div
        aria-hidden="true"
        data-a11y-ignore="aria-hidden-focus"
        data-testid="hidden-select-container"
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          style="font-size: 16px;"
          tabindex="-1"
          type="text"
        />
        <label>
          Dropdown label
          <select
            size="6"
            tabindex="-1"
          >
            <option />
            <option
              value="a-1"
            >
              Option A-1
            </option>
            <option
              value="a-2"
            >
              Option A-2
            </option>
            <option
              value="b-1"
            >
              Option B-1
            </option>
            <option
              value="b-2"
            >
              Option B-2
            </option>
          </select>
        </label>
      </div>
      <button
        aria-controls="dropdown--5__menu"
        aria-disabled="false"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-invalid="false"
        aria-labelledby="dropdown--5__button-content dropdown--5__label"
        class="ds-c-dropdown__button ds-c-field"
        id="dropdown--5"
        type="button"
      >
        <span
          class="ds-c-dropdown__label-text"
          id="dropdown--5__button-content"
        >
          Option A-1
        </span>
        <span
          class="ds-c-dropdown__caret"
        >
          <svg
            aria-hidden="true"
            class="ds-c-icon ds-u-font-size--sm"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M212.7 148.7c6.2-6.2 16.4-6.2 22.6 0l160 160c6.2 6.2 6.2 16.4 0 22.6s-16.4 6.2-22.6 0L224 182.6 75.3 331.3c-6.2 6.2-16.4 6.2-22.6 0s-6.2-16.4 0-22.6l160-160z"
            />
          </svg>
        </span>
      </button>
    </div>
    <template />
  </ds-dropdown>
</DocumentFragment>
`;
